Initial HAL infrastructure: GPIO, SCI, HET PWM timers, PMU profiling
- HET PWM-based 1ms minor frame and 20ms major frame
- GPIO LED toggle for ISR verification
- PMU cycle counter for profiling
- CCS project and HALCoGen config included

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ Binaries/
 *.hex
 *.bin
 *.elf
+*.dil
 
 #################################################
 # CCS / Build System Generated Files
@@ -22,9 +23,9 @@ sources.mk
 #################################################
 # IDE / Workspace Metadata
 #################################################
-.project
-.cproject
-.settings/
+#.project
+#.cproject
+#.settings/
 
 #################################################
 # Temporary / Log Files
